// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MediaViewMultiImage should render 2 images correctly 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "flexDirection": "row",
      "height": 220,
      "marginHorizontal": 12,
      "marginTop": 12,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "column",
        "marginRight": 4,
      }
    }
  >
    <View
      activeOpacity={1}
      onLongPress={[Function]}
      onPress={[Function]}
      style={
        Object {
          "borderRadius": 3,
          "elevation": 2,
          "flex": 1,
          "height": "100%",
          "shadowColor": "rgba(0, 0, 0, 0.4)",
          "shadowOffset": Object {
            "height": 1,
            "width": 0,
          },
          "shadowOpacity": 0.4,
          "shadowRadius": 0,
        }
      }
      testID="image-http://fake.com0"
    >
      <View
        style={
          Object {
            "borderRadius": 3,
            "elevation": 2,
            "flex": 1,
            "height": "100%",
            "shadowColor": "rgba(0, 0, 0, 0.4)",
            "shadowOffset": Object {
              "height": 1,
              "width": 0,
            },
            "shadowOpacity": 0.4,
            "shadowRadius": 0,
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "overflow": "hidden",
              },
              Object {
                "borderRadius": 3,
                "elevation": 2,
                "flex": 1,
                "height": "100%",
                "shadowColor": "rgba(0, 0, 0, 0.4)",
                "shadowOffset": Object {
                  "height": 1,
                  "width": 0,
                },
                "shadowOpacity": 0.4,
                "shadowRadius": 0,
              },
            ]
          }
        >
          <FastImageView
            blurred={false}
            locked={false}
            onFastImageError={[Function]}
            onFastImageLoadEnd={[Function]}
            onFastImageProgress={[Function]}
            resizeMode="cover"
            retry={2}
            source={
              Object {
                "headers": Object {
                  "App-Version": "3.8.0",
                  "Cache-Control": "no-cache, no-store, must-revalidate",
                  "Content-Type": "application/json",
                  "Pragma": "no-cache",
                  "no-cache": "1",
                },
                "uri": "http://fake.com0",
              }
            }
            style={
              Object {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          />
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "column",
        "marginLeft": 4,
      }
    }
  >
    <View
      activeOpacity={1}
      onLongPress={[Function]}
      onPress={[Function]}
      style={
        Object {
          "borderRadius": 3,
          "elevation": 2,
          "flex": 1,
          "height": "100%",
          "shadowColor": "rgba(0, 0, 0, 0.4)",
          "shadowOffset": Object {
            "height": 1,
            "width": 0,
          },
          "shadowOpacity": 0.4,
          "shadowRadius": 0,
        }
      }
      testID="image-http://fake.com1"
    >
      <View
        style={
          Object {
            "borderRadius": 3,
            "elevation": 2,
            "flex": 1,
            "height": "100%",
            "shadowColor": "rgba(0, 0, 0, 0.4)",
            "shadowOffset": Object {
              "height": 1,
              "width": 0,
            },
            "shadowOpacity": 0.4,
            "shadowRadius": 0,
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "overflow": "hidden",
              },
              Object {
                "borderRadius": 3,
                "elevation": 2,
                "flex": 1,
                "height": "100%",
                "shadowColor": "rgba(0, 0, 0, 0.4)",
                "shadowOffset": Object {
                  "height": 1,
                  "width": 0,
                },
                "shadowOpacity": 0.4,
                "shadowRadius": 0,
              },
            ]
          }
        >
          <FastImageView
            blurred={false}
            locked={false}
            onFastImageError={[Function]}
            onFastImageLoadEnd={[Function]}
            onFastImageProgress={[Function]}
            resizeMode="cover"
            retry={2}
            source={
              Object {
                "headers": Object {
                  "App-Version": "3.8.0",
                  "Cache-Control": "no-cache, no-store, must-revalidate",
                  "Content-Type": "application/json",
                  "Pragma": "no-cache",
                  "no-cache": "1",
                },
                "uri": "http://fake.com1",
              }
            }
            style={
              Object {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          />
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`MediaViewMultiImage should render 3 images correctly 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "flexDirection": "row",
      "height": 220,
      "marginHorizontal": 12,
      "marginTop": 12,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "column",
        "marginRight": 4,
      }
    }
  >
    <View
      activeOpacity={1}
      onLongPress={[Function]}
      onPress={[Function]}
      style={
        Object {
          "borderRadius": 3,
          "elevation": 2,
          "flex": 1,
          "height": "100%",
          "shadowColor": "rgba(0, 0, 0, 0.4)",
          "shadowOffset": Object {
            "height": 1,
            "width": 0,
          },
          "shadowOpacity": 0.4,
          "shadowRadius": 0,
        }
      }
      testID="image-http://fake.com0"
    >
      <View
        style={
          Object {
            "borderRadius": 3,
            "elevation": 2,
            "flex": 1,
            "height": "100%",
            "shadowColor": "rgba(0, 0, 0, 0.4)",
            "shadowOffset": Object {
              "height": 1,
              "width": 0,
            },
            "shadowOpacity": 0.4,
            "shadowRadius": 0,
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "overflow": "hidden",
              },
              Object {
                "borderRadius": 3,
                "elevation": 2,
                "flex": 1,
                "height": "100%",
                "shadowColor": "rgba(0, 0, 0, 0.4)",
                "shadowOffset": Object {
                  "height": 1,
                  "width": 0,
                },
                "shadowOpacity": 0.4,
                "shadowRadius": 0,
              },
            ]
          }
        >
          <FastImageView
            blurred={false}
            locked={false}
            onFastImageError={[Function]}
            onFastImageLoadEnd={[Function]}
            onFastImageProgress={[Function]}
            resizeMode="cover"
            retry={2}
            source={
              Object {
                "headers": Object {
                  "App-Version": "3.8.0",
                  "Cache-Control": "no-cache, no-store, must-revalidate",
                  "Content-Type": "application/json",
                  "Pragma": "no-cache",
                  "no-cache": "1",
                },
                "uri": "http://fake.com0",
              }
            }
            style={
              Object {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          />
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "column",
        "marginLeft": 4,
      }
    }
  >
    <View
      activeOpacity={1}
      onLongPress={[Function]}
      onPress={[Function]}
      style={
        Object {
          "borderRadius": 3,
          "elevation": 2,
          "flex": 1,
          "height": "100%",
          "shadowColor": "rgba(0, 0, 0, 0.4)",
          "shadowOffset": Object {
            "height": 1,
            "width": 0,
          },
          "shadowOpacity": 0.4,
          "shadowRadius": 0,
        }
      }
      testID="image-http://fake.com1"
    >
      <View
        style={
          Object {
            "borderRadius": 3,
            "elevation": 2,
            "flex": 1,
            "height": "100%",
            "shadowColor": "rgba(0, 0, 0, 0.4)",
            "shadowOffset": Object {
              "height": 1,
              "width": 0,
            },
            "shadowOpacity": 0.4,
            "shadowRadius": 0,
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "overflow": "hidden",
              },
              Object {
                "borderRadius": 3,
                "elevation": 2,
                "flex": 1,
                "height": "100%",
                "shadowColor": "rgba(0, 0, 0, 0.4)",
                "shadowOffset": Object {
                  "height": 1,
                  "width": 0,
                },
                "shadowOpacity": 0.4,
                "shadowRadius": 0,
              },
            ]
          }
        >
          <FastImageView
            blurred={false}
            locked={false}
            onFastImageError={[Function]}
            onFastImageLoadEnd={[Function]}
            onFastImageProgress={[Function]}
            resizeMode="cover"
            retry={2}
            source={
              Object {
                "headers": Object {
                  "App-Version": "3.8.0",
                  "Cache-Control": "no-cache, no-store, must-revalidate",
                  "Content-Type": "application/json",
                  "Pragma": "no-cache",
                  "no-cache": "1",
                },
                "uri": "http://fake.com1",
              }
            }
            style={
              Object {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          />
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "marginTop": 8,
        }
      }
    />
    <View
      activeOpacity={1}
      onLongPress={[Function]}
      onPress={[Function]}
      style={
        Object {
          "borderRadius": 3,
          "elevation": 2,
          "flex": 1,
          "height": "100%",
          "shadowColor": "rgba(0, 0, 0, 0.4)",
          "shadowOffset": Object {
            "height": 1,
            "width": 0,
          },
          "shadowOpacity": 0.4,
          "shadowRadius": 0,
        }
      }
      testID="image-http://fake.com2"
    >
      <View
        style={
          Object {
            "borderRadius": 3,
            "elevation": 2,
            "flex": 1,
            "height": "100%",
            "shadowColor": "rgba(0, 0, 0, 0.4)",
            "shadowOffset": Object {
              "height": 1,
              "width": 0,
            },
            "shadowOpacity": 0.4,
            "shadowRadius": 0,
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "overflow": "hidden",
              },
              Object {
                "borderRadius": 3,
                "elevation": 2,
                "flex": 1,
                "height": "100%",
                "shadowColor": "rgba(0, 0, 0, 0.4)",
                "shadowOffset": Object {
                  "height": 1,
                  "width": 0,
                },
                "shadowOpacity": 0.4,
                "shadowRadius": 0,
              },
            ]
          }
        >
          <FastImageView
            blurred={false}
            locked={false}
            onFastImageError={[Function]}
            onFastImageLoadEnd={[Function]}
            onFastImageProgress={[Function]}
            resizeMode="cover"
            retry={2}
            source={
              Object {
                "headers": Object {
                  "App-Version": "3.8.0",
                  "Cache-Control": "no-cache, no-store, must-revalidate",
                  "Content-Type": "application/json",
                  "Pragma": "no-cache",
                  "no-cache": "1",
                },
                "uri": "http://fake.com2",
              }
            }
            style={
              Object {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          />
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`MediaViewMultiImage should render 4 images correctly 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "flexDirection": "row",
      "height": 220,
      "marginHorizontal": 12,
      "marginTop": 12,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "column",
        "marginRight": 4,
      }
    }
  >
    <View
      activeOpacity={1}
      onLongPress={[Function]}
      onPress={[Function]}
      style={
        Object {
          "borderRadius": 3,
          "elevation": 2,
          "flex": 1,
          "height": "100%",
          "shadowColor": "rgba(0, 0, 0, 0.4)",
          "shadowOffset": Object {
            "height": 1,
            "width": 0,
          },
          "shadowOpacity": 0.4,
          "shadowRadius": 0,
        }
      }
      testID="image-http://fake.com0"
    >
      <View
        style={
          Object {
            "borderRadius": 3,
            "elevation": 2,
            "flex": 1,
            "height": "100%",
            "shadowColor": "rgba(0, 0, 0, 0.4)",
            "shadowOffset": Object {
              "height": 1,
              "width": 0,
            },
            "shadowOpacity": 0.4,
            "shadowRadius": 0,
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "overflow": "hidden",
              },
              Object {
                "borderRadius": 3,
                "elevation": 2,
                "flex": 1,
                "height": "100%",
                "shadowColor": "rgba(0, 0, 0, 0.4)",
                "shadowOffset": Object {
                  "height": 1,
                  "width": 0,
                },
                "shadowOpacity": 0.4,
                "shadowRadius": 0,
              },
            ]
          }
        >
          <FastImageView
            blurred={false}
            locked={false}
            onFastImageError={[Function]}
            onFastImageLoadEnd={[Function]}
            onFastImageProgress={[Function]}
            resizeMode="cover"
            retry={2}
            source={
              Object {
                "headers": Object {
                  "App-Version": "3.8.0",
                  "Cache-Control": "no-cache, no-store, must-revalidate",
                  "Content-Type": "application/json",
                  "Pragma": "no-cache",
                  "no-cache": "1",
                },
                "uri": "http://fake.com0",
              }
            }
            style={
              Object {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          />
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "marginTop": 8,
        }
      }
    />
    <View
      activeOpacity={1}
      onLongPress={[Function]}
      onPress={[Function]}
      style={
        Object {
          "borderRadius": 3,
          "elevation": 2,
          "flex": 1,
          "height": "100%",
          "shadowColor": "rgba(0, 0, 0, 0.4)",
          "shadowOffset": Object {
            "height": 1,
            "width": 0,
          },
          "shadowOpacity": 0.4,
          "shadowRadius": 0,
        }
      }
      testID="image-http://fake.com2"
    >
      <View
        style={
          Object {
            "borderRadius": 3,
            "elevation": 2,
            "flex": 1,
            "height": "100%",
            "shadowColor": "rgba(0, 0, 0, 0.4)",
            "shadowOffset": Object {
              "height": 1,
              "width": 0,
            },
            "shadowOpacity": 0.4,
            "shadowRadius": 0,
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "overflow": "hidden",
              },
              Object {
                "borderRadius": 3,
                "elevation": 2,
                "flex": 1,
                "height": "100%",
                "shadowColor": "rgba(0, 0, 0, 0.4)",
                "shadowOffset": Object {
                  "height": 1,
                  "width": 0,
                },
                "shadowOpacity": 0.4,
                "shadowRadius": 0,
              },
            ]
          }
        >
          <FastImageView
            blurred={false}
            locked={false}
            onFastImageError={[Function]}
            onFastImageLoadEnd={[Function]}
            onFastImageProgress={[Function]}
            resizeMode="cover"
            retry={2}
            source={
              Object {
                "headers": Object {
                  "App-Version": "3.8.0",
                  "Cache-Control": "no-cache, no-store, must-revalidate",
                  "Content-Type": "application/json",
                  "Pragma": "no-cache",
                  "no-cache": "1",
                },
                "uri": "http://fake.com2",
              }
            }
            style={
              Object {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          />
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "column",
        "marginLeft": 4,
      }
    }
  >
    <View
      activeOpacity={1}
      onLongPress={[Function]}
      onPress={[Function]}
      style={
        Object {
          "borderRadius": 3,
          "elevation": 2,
          "flex": 1,
          "height": "100%",
          "shadowColor": "rgba(0, 0, 0, 0.4)",
          "shadowOffset": Object {
            "height": 1,
            "width": 0,
          },
          "shadowOpacity": 0.4,
          "shadowRadius": 0,
        }
      }
      testID="image-http://fake.com1"
    >
      <View
        style={
          Object {
            "borderRadius": 3,
            "elevation": 2,
            "flex": 1,
            "height": "100%",
            "shadowColor": "rgba(0, 0, 0, 0.4)",
            "shadowOffset": Object {
              "height": 1,
              "width": 0,
            },
            "shadowOpacity": 0.4,
            "shadowRadius": 0,
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "overflow": "hidden",
              },
              Object {
                "borderRadius": 3,
                "elevation": 2,
                "flex": 1,
                "height": "100%",
                "shadowColor": "rgba(0, 0, 0, 0.4)",
                "shadowOffset": Object {
                  "height": 1,
                  "width": 0,
                },
                "shadowOpacity": 0.4,
                "shadowRadius": 0,
              },
            ]
          }
        >
          <FastImageView
            blurred={false}
            locked={false}
            onFastImageError={[Function]}
            onFastImageLoadEnd={[Function]}
            onFastImageProgress={[Function]}
            resizeMode="cover"
            retry={2}
            source={
              Object {
                "headers": Object {
                  "App-Version": "3.8.0",
                  "Cache-Control": "no-cache, no-store, must-revalidate",
                  "Content-Type": "application/json",
                  "Pragma": "no-cache",
                  "no-cache": "1",
                },
                "uri": "http://fake.com1",
              }
            }
            style={
              Object {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          />
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "marginTop": 8,
        }
      }
    />
    <View
      activeOpacity={1}
      onLongPress={[Function]}
      onPress={[Function]}
      style={
        Object {
          "borderRadius": 3,
          "elevation": 2,
          "flex": 1,
          "height": "100%",
          "shadowColor": "rgba(0, 0, 0, 0.4)",
          "shadowOffset": Object {
            "height": 1,
            "width": 0,
          },
          "shadowOpacity": 0.4,
          "shadowRadius": 0,
        }
      }
      testID="image-http://fake.com3"
    >
      <View
        style={
          Object {
            "borderRadius": 3,
            "elevation": 2,
            "flex": 1,
            "height": "100%",
            "shadowColor": "rgba(0, 0, 0, 0.4)",
            "shadowOffset": Object {
              "height": 1,
              "width": 0,
            },
            "shadowOpacity": 0.4,
            "shadowRadius": 0,
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "overflow": "hidden",
              },
              Object {
                "borderRadius": 3,
                "elevation": 2,
                "flex": 1,
                "height": "100%",
                "shadowColor": "rgba(0, 0, 0, 0.4)",
                "shadowOffset": Object {
                  "height": 1,
                  "width": 0,
                },
                "shadowOpacity": 0.4,
                "shadowRadius": 0,
              },
            ]
          }
        >
          <FastImageView
            blurred={false}
            locked={false}
            onFastImageError={[Function]}
            onFastImageLoadEnd={[Function]}
            onFastImageProgress={[Function]}
            resizeMode="cover"
            retry={2}
            source={
              Object {
                "headers": Object {
                  "App-Version": "3.8.0",
                  "Cache-Control": "no-cache, no-store, must-revalidate",
                  "Content-Type": "application/json",
                  "Pragma": "no-cache",
                  "no-cache": "1",
                },
                "uri": "http://fake.com3",
              }
            }
            style={
              Object {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          />
        </View>
      </View>
    </View>
  </View>
</View>
`;
